# Python-web-hw08

./: pyproject.toml
Part_1/: get_data.py  models.py  seeds.py
Part_1_add/: config.ini  get_data.py  models.py
Part_2/: commands.txt  config.ini  connect.py  consumer.py  producer.py
Part_2_add/: config.ini  consumer_email.py  consumer_sms.py  models.py  producer.py
