[tool.poetry]
name = "web08-part2"
version = "0.1.0"
description = "rabit mq"
authors = ["Mikhaylo Ivanov <ivmv2007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
mongoengine = "^0.27.0"
faker = "^19.8.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
